# llm-tape

./: LICENSE  README.md  pyproject.toml
examples/summarize_agent/: test_agent.py
src/agent_tape/: _assertions.py  _patch.py  _tape.py  _transport.py  pytest_plugin.py
tests/: conftest.py  test_assertions.py  test_e2e.py  test_streaming.py  test_tape.py
